log
Thu 14 Sep 2023 05:03:35 PM UTC: 
 tests:  1|8
total_score: 0/70
5a3b776
Thu 14 Sep 2023 05:13:37 PM UTC: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
e526c2e
Thu 14 Sep 2023 05:51:50 PM UTC: 
 treemap.c | 29 ++++++++++++++---------------
 1 file changed, 14 insertions(+), 15 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:3: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
   76 |   treeNode* currenNode = tree -> root;
      |   ^~~~~~~~
      |   TreeNode
treemap.c:76:26: error: initialization of ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   76 |   treeNode* currenNode = tree -> root;
      |                          ^~~~
treemap.c:77:9: error: ‘currendNode’ undeclared (first use in this function); did you mean ‘currenNode’?
   77 |   while(currendNode != NULL)
      |         ^~~~~~~~~~~
      |         currenNode
treemap.c:77:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:76:13: error: unused variable ‘currenNode’ [-Werror=unused-variable]
   76 |   treeNode* currenNode = tree -> root;
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8deee15
